--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job task</title>
+    <title>-</title>
   </head>
   <body>
     <div id="app"></div>
-    <h1 class="">Hi</h1>
+    <h1 class="bg-blue-400 w-fit">Hi</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
