--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>-</title>
+    <title>...</title>
   </head>
   <body>
-    <h1 class="bg-blue-400 w-fit">Hi</h1>
-    <script type="module" src="/main.js"></script>
+    <div class="bg-sky-300 w-fit">Tailwind</div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
